--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coursera Test (Module2 Solution)</title>
+    <link rel="stylesheet" src="./css/style.css">
 </head>
 <body>
     <div>Hello</div>
