--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coursera Test (Module2 Solution)</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Corsera Test | Module 2 Solution (Our Menu)</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div>Hello</div>
+    <h1>Our Menu</h1>
+
+    <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <div class="no">
+                <div id="no1">
+                    <h2>Chiken</h2>
+                </div>
+                <p>All white meat, shredded chicken, finely minced celery, mayonnaise, & our secret seasoning,
+                    and refreshing blend of Fuji apples, & pineapple.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <div class="no">
+                <div id="no2">
+                    <h2>Beef</h2>
+                </div>
+                <p>All white meat, shredded chicken, finely minced celery, mayonnaise, & our secret seasoning,
+                    and refreshing blend of Fuji apples, & pineapple.</p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="no">
+                <div id="no3">
+                    <h2>Sushi</h2>
+                </div>
+                <p>All white meat, shredded chicken, finely minced celery, mayonnaise, & our secret seasoning,
+                    and refreshing blend of Fuji apples, & pineapple.</p>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
